@@ -25,8 +25,8 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.regex.Pattern;
 import net.minecraft.world.effect.MobEffects;
-import net.minecraftforge.eventbus.api.EventPriority;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.neoforged.bus.api.EventPriority;
+import net.neoforged.bus.api.SubscribeEvent;
 
 /**
  * The responsibility of this class is to act as the first gateway for incoming
@@ -102,7 +102,7 @@ public final class ChatHandler extends Handler {
     private List<StyledText> collectedLines = new ArrayList<>();
 
     @SubscribeEvent
-    public void onConnectionChange(WynncraftConnectionEvent event) {
+    public void onConnectionChange(WynncraftConnectionEvent.Connected event) {
         // Reset chat handler
         collectedLines = new ArrayList<>();
         chatScreenTicks = 0;
@@ -129,9 +129,16 @@ public final class ChatHandler extends Handler {
     }
 
     @SubscribeEvent(priority = EventPriority.HIGHEST)
-    public void onChatReceived(ChatPacketReceivedEvent event) {
-        if (event instanceof ChatPacketReceivedEvent.GameInfo) return;
+    public void onPlayerChatReceived(ChatPacketReceivedEvent.Player event) {
+        if (shouldSeparateNPC()) {
+            handleWithSeparation(event);
+        } else {
+            handleIncomingChatLine(event);
+        }
+    }
 
+    @SubscribeEvent(priority = EventPriority.HIGHEST)
+    public void onSystemChatReceived(ChatPacketReceivedEvent.System event) {
         if (shouldSeparateNPC()) {
             handleWithSeparation(event);
         } else {
@@ -143,7 +150,7 @@ public final class ChatHandler extends Handler {
     public void onStatusEffectUpdate(MobEffectEvent.Update event) {
         if (event.getEntity() != McUtils.player()) return;
 
-        if (event.getEffect() == MobEffects.MOVEMENT_SLOWDOWN
+        if (event.getEffect().equals(MobEffects.MOVEMENT_SLOWDOWN.value())
                 && event.getEffectAmplifier() == 3
                 && event.getEffectDurationTicks() == 32767) {
             if (delayedDialogue != null) {
@@ -161,7 +168,7 @@ public final class ChatHandler extends Handler {
     public void onStatusEffectRemove(MobEffectEvent.Remove event) {
         if (event.getEntity() != McUtils.player()) return;
 
-        if (event.getEffect() == MobEffects.MOVEMENT_SLOWDOWN) {
+        if (event.getEffect().equals(MobEffects.MOVEMENT_SLOWDOWN.value())) {
             lastSlowdownApplied = 0;
         }
     }
@@ -562,7 +569,7 @@ public final class ChatHandler extends Handler {
 
             // Store the last confirmationless dialogue, but it may be repeated,
             // so we need to check that it's not duplicated when a message is sent during the dialogue
-            lastConfirmationlessDialogue = dialogue.get(0);
+            lastConfirmationlessDialogue = dialogue.getFirst();
         } else {
             if (lastScreenNpcDialogue.equals(dialogue)) return;
 
